Made changes to app.js and index.html to add single products dynamicaaly.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <script src="https://kit.fontawesome.com/d01a351df4.js" crossorigin="anonymous"></script><script src="https://kit.fontawesome.com/d01a351df4.js" crossorigin="anonymous"></script>
   <!-------------- Custom Css ----------------->
   <link rel="stylesheet" href="main.css">
-  <!--<link rel="stylesheet" href="main.css"> // completed stylesheet-->
 
 </head>
 <body>
@@ -43,7 +42,8 @@
         <h2>our products</h2>
       </div>
       <div class="products-center">
-        <!---------------------------Single Product---------------------------->
+        <!-------------------Reference in app.js UI Class----------------------------> 
+        <!---------------------------Single Product->
         <article class="product">
           <div class="img-container">
             <img class="product-img" src="./images/product-1.jpeg" alt="product">
@@ -55,7 +55,8 @@
           <h3>queen bed</h3>
           <h4>R1600</h4>
         </article>
-         <!---------------------------End of Single Product---------------------------->
+         <---------------------------End of Single Product---------------------------->
+         <!----------------------------------------------------------------------------->
       </div>
     </section>
     <!--------------------------End of Product ----------------------------------->
